# morphix

./: .gitignore  main.py  pyproject.toml
backend/configs/: __init__.py
backend/configs/feature/: __init__.py
backend/docs/design/: Beehive 架构 vs 分层架构对比分析.md  Dify 移除 LangChain 的深度分析报告.md
backend/docs/development/: Dify 系统教学式开发教程.md  temp.md
backend/tests/: test_configs.py
configs/: __init__.py  app_config.py
docs/design/: LangGraph vs Dify 2025年综合技术对比分析报告.md  LangGraph vs Dify：六边形架构适用性的深度对比分析.md  项目依赖库使用指南.md
docs/development/: Dify 系统教学式开发教程.md  原始思路.md  学习指南生成提示词模板.md
docs/tests/: README.md
